--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <!-- Other string resources-->
     <string name="app_name">GitHubUser</string>
+    <string name="search" >Cari pengguna</string>
+    <string name="search_hint">Masukkan username</string>
     <string-array name="username">
         <item>JakeWharton</item>
         <item>amitshekhariitbhu</item>
